updated gradle.build file